# FixedPoint

./: CMakeLists.txt  README.md  Rational.h  decimal.h  longtypes.h  main.cpp  uint16_reciprocals.h  uint32_reciprocals.h
